kiali-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: kiali-ingress
  namespace: istio-system
spec:
  tls:
    - hosts:
	  - kiali.k8s-cluster-001.local
  rules:
  - host: kiali.k8s-cluster-001.local
    http:
      paths:
      - backend:
          serviceName: kiali
          servicePort: 20001
        path: /
